--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
     
 </head>
 <body class="inter-font">
-    
+    <header>
+        <section class="nav-container">
+            <nav>
+                <div><H2>Tech<span class="nav-gdn">Wave</span></H2></div>
+                <div>
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Episodes</a></li>
+                        <li><a href="#">Host</a></li>
+                    </ul>
+                </div>
+                <div><button class="cm-btn">Subscribe <i class="fa-solid fa-arrow-right"></i></button></div>
+            </nav>
+        </section>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
