Hero Section Added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,22 @@
         </section>
     </header>
     <main>
+        <section class="hero-container">
+            <div class="mic">
+                <span class="badge">NEW</span>
+                <img src="/assets/hero-circle.png" alt="" class="img1">
+                <img src="/assets/microphone.png" alt="" class="img2">
+            </div>
+            <div class="hero-content">
+                <h1>TechWave</h1>
+                <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                <div class="hero-btn">
+                    <button class="cm-btn"><i class="fa-brands fa-spotify"></i> Listen on Spotify</button>
+                    <button class="ucm-btn"><i class="fa-regular fa-envelope"></i> Subscribe</button>
+                </div>
 
+            </div>
+        </section>
     </main>
     <footer>
 
