image link fixing

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <section class="hero-container">
             <div class="mic">
                 <span class="badge">NEW</span>
-                <img src="/assets/hero-circle.png" alt="" class="img1">
-                <img src="/assets/microphone.png" alt="" class="img2">
+                <img src="./assets/hero-circle.png" alt="" class="img1">
+                <img src="./assets/microphone.png" alt="" class="img2">
             </div>
             <div class="hero-content">
                 <h1>TechWave</h1>
