tried to make a responsive navigation

--- a/index.html
+++ b/index.html
@@ -16,14 +16,19 @@
         <section class="nav-container">
             <nav>
                 <div><H2>Tech<span class="nav-gdn">Wave</span></H2></div>
-                <div>
-                    <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Episodes</a></li>
-                        <li><a href="#">Host</a></li>
-                    </ul>
+                <div class="navigation-ham">
+                    <div>
+                        <ul class="nav-links">
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Episodes</a></li>
+                            <li><a href="#">Host</a></li>
+                        </ul>
+                    </div>
+                    <div><button class="cm-btn">Subscribe <i class="fa-solid fa-arrow-right"></i></button></div>
                 </div>
-                <div><button class="cm-btn">Subscribe <i class="fa-solid fa-arrow-right"></i></button></div>
+                <div id="hamburger" class="hamburger">
+                    <img src="./assets/hamburger-menu.png" alt="">
+                </div>
             </nav>
         </section>
     </header>
