--- a/index.html
+++ b/index.html
@@ -49,6 +49,36 @@
 
             </div>
         </section>
+
+        <section class="about-container">
+            <div class="about-content">
+                <h1>About the Podcast</h1>
+                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+We break down complex topics into digestible insights, explore productivity strategies that actually work,
+and share stories of personal growth from industry leaders. <br><br><br>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+            </div>
+            <div class="hr-line">
+                <hr>
+            </div>
+            <div class="about-cards">
+                <div class="ab-cards">
+                    <h1>150K+</h1>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="ab-cards">
+                    <h1>200+</h1>
+                    <p>Episodes Published</p>
+                </div>
+                <div class="ab-cards">
+                    <h1>4.9★</h1>
+                    <p>Average Rating</p>
+                </div>
+                <div class="ab-cards">
+                    <h1>50+</h1>
+                    <p>Industry Experts</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
