--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 2 By Jubayer</title>
+
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -16,16 +17,14 @@
         <section class="nav-container">
             <nav>
                 <div><H2>Tech<span class="nav-gdn">Wave</span></H2></div>
-                <div class="navigation-ham">
-                    <div>
-                        <ul class="nav-links">
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Episodes</a></li>
-                            <li><a href="#">Host</a></li>
-                        </ul>
-                    </div>
-                    <div><button class="cm-btn">Subscribe <i class="fa-solid fa-arrow-right"></i></button></div>
+                <div>
+                    <ul class="nav-links">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Episodes</a></li>
+                        <li><a href="#">Host</a></li>
+                    </ul>
                 </div>
+                <div><button class="cm-btn">Subscribe <i class="fa-solid fa-arrow-right"></i></button></div>
                 <div id="hamburger" class="hamburger">
                     <img src="./assets/hamburger-menu.png" alt="">
                 </div>
@@ -76,6 +75,40 @@ and share stories of personal growth from industry leaders. <br><br><br>Join tho
                 <div class="ab-cards">
                     <h1>50+</h1>
                     <p>Industry Experts</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="wct-container">
+            
+            <h1>Why Choose TechWave</h1>
+            <div class="wct-content">
+                <div class="grid-parent">
+                    <div class="g-child grid-child-1">
+                        <img src="./assets/headphone.png" alt="">
+                        <h2>Premium Audio Quality</h2>
+                        <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+                    </div>
+                    <div class="g-child grid-child-2">
+                        <img src="./assets/device.png" alt="">
+                        <h2>Mobile Friendly</h2>
+                        <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+                    </div>
+                    <div class="g-child grid-child-3">
+                        <img src="./assets/location.png" alt="">
+                        <h2>Global Community</h2>
+                        <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                    </div>
+                    <div class="g-child grid-child-4">
+                        <img src="./assets/zap-fast.png" alt="">
+                        <h2>Exclusive Interviews</h2>
+                        <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+                    </div>
+                    <div class="g-child grid-child-5">
+                        <img src="./assets/resource.png" alt="">
+                        <h2>Rich Resources</h2>
+                        <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+                    </div>
                 </div>
             </div>
         </section>
