--- a/index.html
+++ b/index.html
@@ -112,6 +112,70 @@ and share stories of personal growth from industry leaders. <br><br><br>Join tho
                 </div>
             </div>
         </section>
+
+        <section class="featured-container">
+            <div class="ft-content">
+                <h1>Featured Episodes</h1>
+                <div class="f-ep">
+                    <div class="card">
+                        <iframe width="380" height="214" src="https://www.youtube.com/embed/2f5NHArhhQ0?si=G4z8nxPwqCKopav3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                        <div class="card-content">
+                            <h2>The Future of AI in Everyday Life</h2>
+                            <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                            <div class="video-time">
+                                <img src="./assets/clock.png" alt="">
+                                <p>3:35</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="card">
+                        <iframe width="380" height="214" src="https://www.youtube.com/embed/WQ40hNdZmfQ?si=BN-aG1k-9Q4DWtvY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <div class="card-content">
+                            <h2>Building Better Habits for Remote Work</h2>
+                            <p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                            <div class="video-time">
+                                <img src="./assets/clock.png" alt="">
+                                <p>7:36</p>
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <div class="card">
+                        <iframe width="380" height="214" src="https://www.youtube.com/embed/avdDEZCcluo?si=jWiIKSxIoPwLB3uB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <div class="card-content">
+                            <h2>Career Growth in Tech: A Roadmap</h2>
+                            <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                            <div class="video-time">
+                                <img src="./assets/clock.png" alt="">
+                                <p>17:17</p>
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="f-mt">
+                <h1>Meet The Host</h1>
+                <div class="single-card">
+                    <div class="sc-img">
+                        <img src="./assets/host.png" alt="">
+                    </div>
+                    <div class="sc-content">
+                        <h2>Alex Kumar</h2>
+                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                        <ul class="social-icons">
+                            <li><img src="./assets/linkedin.png" alt=""></li>
+                            <li><img src="./assets/x.png" alt=""></li>
+                            <li><img src="./assets/instagram.png" alt=""></li>
+                            <li><img src="./assets/youtube.png" alt=""></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
