Featured section and social links added

--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@ and share stories of personal growth from industry leaders. <br><br><br>Join tho
                         <h2>Alex Kumar</h2>
                         <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
                         <ul class="social-icons">
-                            <li><img src="./assets/linkedin.png" alt=""></li>
-                            <li><img src="./assets/x.png" alt=""></li>
-                            <li><img src="./assets/instagram.png" alt=""></li>
-                            <li><img src="./assets/youtube.png" alt=""></li>
+                            <li><a href="https://www.linkedin.com/in/pro-jubayer/" target="_blank"><img src="./assets/linkedin.png" alt=""></a></li>
+                            <li><a href="#"><img src="./assets/x.png" alt=""></a></li>
+                            <li><a href="https://www.instagram.com/jubayer.info360/" target="_blank"><img src="./assets/instagram.png" alt=""></a></li>
+                            <li><a href="https://www.youtube.com/@JubayerITTech" target="_blank"><img src="./assets/youtube.png" alt=""></a></li>
                         </ul>
                     </div>
                 </div>
