Footer Section Added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <section class="nav-container">
             <nav>
-                <div><H2>Tech<span class="nav-gdn">Wave</span></H2></div>
+                <div><h2>Tech<span class="nav-gdn">Wave</span></h2></div>
                 <div>
                     <ul class="nav-links">
                         <li><a href="#">About</a></li>
@@ -176,9 +176,29 @@ and share stories of personal growth from industry leaders. <br><br><br>Join tho
                 </div>
             </div>
         </section>
-    </main>
-    <footer>
 
+    </main>
+    <footer class="footer-container">
+        <div><h1>Tech<span class="nav-gdn">Wave</span></h1></div>
+        <div class="ft-icon">
+            <div class="ft-social">
+                <img src="./assets/spotify.png" alt="">
+                 <p>Spotify</p>
+            </div>
+            <div class="ft-social">
+                <img src="./assets/apple-podcast.png" alt=""> 
+                <p>Apple Podcasts</p>
+            </div>
+            <div class="ft-social">
+                <img src="./assets/youtube-podcast.png" alt=""> 
+                <p>YouTube</p>
+            </div>
+            <div class="ft-social">
+                <img src="./assets/twitter.png" alt=""> 
+                <p>Twitter</p>
+            </div>
+        </div>
+        <p>© 2026 TechWave Podcast. All rights reserved.</p>
     </footer>
 </body>
 </html>
