Responsiv for small device and some bug fixed

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
                 <span class="badge">NEW</span>
                 <img src="./assets/hero-circle.png" alt="" class="img1">
                 <img src="./assets/microphone.png" alt="" class="img2">
+
             </div>
             <div class="hero-content">
                 <h1>TechWave</h1>
-                <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                <p class="hcp">Your daily dose of tech insights, productivity hacks, and personal growth</p>
                 <div class="hero-btn">
                     <button class="cm-btn"><i class="fa-brands fa-spotify"></i> Listen on Spotify</button>
                     <button class="ucm-btn"><i class="fa-regular fa-envelope"></i> Subscribe</button>
@@ -52,9 +53,10 @@
         <section class="about-container">
             <div class="about-content">
                 <h1>About the Podcast</h1>
-                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+                <p class="abt-p">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
 We break down complex topics into digestible insights, explore productivity strategies that actually work,
-and share stories of personal growth from industry leaders. <br><br><br>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+and share stories of personal growth from industry leaders.</p>
+<p class="abt-p">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
             </div>
             <div class="hr-line">
                 <hr>
@@ -87,17 +89,17 @@ and share stories of personal growth from industry leaders. <br><br><br>Join tho
                     <div class="g-child grid-child-1">
                         <img src="./assets/headphone.png" alt="">
                         <h2>Premium Audio Quality</h2>
-                        <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+                        <p class="g-child-p">Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
                     </div>
                     <div class="g-child grid-child-2">
                         <img src="./assets/device.png" alt="">
                         <h2>Mobile Friendly</h2>
-                        <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+                        <p class="g-child-p">Listen on the go with seamless mobile experience and offline downloads.</p>
                     </div>
                     <div class="g-child grid-child-3">
                         <img src="./assets/location.png" alt="">
                         <h2>Global Community</h2>
-                        <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                        <p class="g-child-p">Connect with tech enthusiasts from over 120 countries worldwide.</p>
                     </div>
                     <div class="g-child grid-child-4">
                         <img src="./assets/zap-fast.png" alt="">
@@ -122,7 +124,7 @@ and share stories of personal growth from industry leaders. <br><br><br>Join tho
 
                         <div class="card-content">
                             <h2>The Future of AI in Everyday Life</h2>
-                            <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                            <p class="f-ep-p">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
                             <div class="video-time">
                                 <img src="./assets/clock.png" alt="">
                                 <p>3:35</p>
@@ -189,11 +191,11 @@ and share stories of personal growth from industry leaders. <br><br><br>Join tho
                 <img src="./assets/apple-podcast.png" alt=""> 
                 <p>Apple Podcasts</p>
             </div>
-            <div class="ft-social">
+            <div class="ft-social row2">
                 <img src="./assets/youtube-podcast.png" alt=""> 
                 <p>YouTube</p>
             </div>
-            <div class="ft-social">
+            <div class="ft-social row2">
                 <img src="./assets/twitter.png" alt=""> 
                 <p>Twitter</p>
             </div>
